Closed
Bug 296596
Opened 20 years ago
Closed 20 years ago
Make delay when clicking and holding back/foward buttons in the toolbar shorter
Categories
(Camino Graveyard :: Toolbars & Menus, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino1.0
People
(Reporter: echidnae, Assigned: mikepinkerton)
Details
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b2) Gecko/20050603 Camino/0.8+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b2) Gecko/20050603 Camino/0.8+
Currently, Camino has a substantial delay when clicking and holding on the
back/forward buttons in the toolbar to make the session history menu appear.
The way Safari handles this, the delay to make the menu appear is almost
instantaneous. Making Camino's delay shorter like Safari would be a good idea,
especially since session history in the Go menu is no more, and some people
still want quick access to session history.
Reproducible: Always
Yeah. In an unscientific test, Safari's was available before I could say "one
one thousand;" Camino's took "three one thousand," which seems long by itself
(or in comparison to the Go menu after first use) and "like forever" after
testing Safari....
Maybe easy enough for 1.0?
Severity: normal → minor
Status: UNCONFIRMED → NEW
Ever confirmed: true
Target Milestone: --- → Camino1.0
I don't think that this should be hard.
A little research and I came up with this:
BrowserWindowController.mm line 798 -> [newCell setClickHoldTimeout:0.75];
We probably only need to tweak that numbre, Mike made that feature so he could
verify.
| Assignee | ||
Comment 3•20 years ago
|
||
made it 0.45. Seems to be better.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•