reduce click-hold delay on back/fwd buttons to 0.45 (bug 296596)